--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,8 @@
   <h1>Blog Post 2: A Message Bank</h1>
   <!-- <b>Navigation:</b> -->
   <ul>
-    <li><a href="{{ url_for('submit') }}">Submit A Message</a></li>
-    <li><a href="{{ url_for('main') }}">View A Message</a></li>
+    <li><a href="{{ url_for('submit') }}">Submit Messages</a></li>
+    <li><a href="{{ url_for('view') }}">View Messages</a></li>
   </ul>
 </nav>
 <section class="content">
