--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <h1>Blog Post 2: A Message Bank</h1>
   <!-- <b>Navigation:</b> -->
   <ul>
+    <li><a href="{{ url_for('main') }}">Introduction</a></li>
     <li><a href="{{ url_for('submit') }}">Submit Messages</a></li>
     <li><a href="{{ url_for('view') }}">View Messages</a></li>
   </ul>
